src/objects/ADvendio__Revenue_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AccumulatedDeliveryTillNow__c</fullName>
        <description>This value will be filled automatically by ADvendio Trigger. It sums up the total Delivery of the Campaign Item for this and all prior Revenue Schedules.</description>
        <label>Accumulated Delivery Till Now</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount__c</fullName>
        <description>This value will be filled automatically by a script. It displays the amount of the of the assigned campaign item.</description>
        <inlineHelpText>This value will be filled automatically by a script. It displays the amount of the of the assigned campaign item.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net_net__c</fullName>
        <description>This value will be filled automatically by a script. It displays the agency net (N2) of the of the assigned campaign item.</description>
        <inlineHelpText>This value will be filled automatically by a script. It displays the agency net (N2) of the of the assigned campaign item.</inlineHelpText>
        <label>Amount net/net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Campaign_Item__c</fullName>
        <description>The connection to the campaign item will be assigned automatically when a new campaign item is created.</description>
        <inlineHelpText>The connection to the campaign item will be assigned automatically when a new campaign item is created.</inlineHelpText>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules_NEW</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Days__c</fullName>
        <description>This field shows the number of days of the current month (RS) / day (RSD).</description>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredAIs3rdParty__c</fullName>
        <description>This value will be filled automatically by a script when using a 3rd Party Reporting System like Ad-Juster, Moat etc. It displays the delivered AIs from a external Source of the assigned campaign item.</description>
        <inlineHelpText>This value will be filled automatically by a script when using a 3rd Party Reporting System like Ad-Juster, Moat etc. It displays the delivered AIs from a external Source of the assigned campaign item</inlineHelpText>
        <label>Delivered AIs (3rd Party)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredAIsManual__c</fullName>
        <description>This field can be used to override the Delivered AIs manually</description>
        <label>Delivered AIs (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredClicks3rdParty__c</fullName>
        <description>This value will be filled automatically by a script when using a 3rd Party Reporting System like Ad-Juster, Moat etc. It displays the delivered Clicks from a external Source of the assigned campaign item.</description>
        <inlineHelpText>This value will be filled automatically by a script when using a 3rd Party Reporting System like Ad-Juster, Moat etc. It displays the delivered Clicks from a external Source of the assigned campaign item.</inlineHelpText>
        <label>Delivered Clicks (3rd Party)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredClicksManual__c</fullName>
        <description>This field can be used to correct the Delivered Clicks manually.</description>
        <label>Delivered Clicks (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Delivered_AIs__c</fullName>
        <description>This value will be filled automatically by a script. It displays the delivered AIs of the assigned campaign item.</description>
        <inlineHelpText>This value will be filled automatically by a script. It displays the delivered AIs of the assigned campaign item.</inlineHelpText>
        <label>Delivered AIs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Delivered_Clicks__c</fullName>
        <description>This value will be filled automatically by a script. It displays the delivered clicks of the assigned campaign item.</description>
        <inlineHelpText>This value will be filled automatically by a script. It displays the delivered clicks of the of the assigned campaign item.</inlineHelpText>
        <label>Delivered Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__EndDate__c</fullName>
        <description>This field displays the end date of the month.</description>
        <formula>IF( MONTH( ADvendio__Campaign_Item__r.ADvendio__until_Date__c ) = MONTH( ADvendio__Month__c )
    &amp;&amp; YEAR( ADvendio__Campaign_Item__r.ADvendio__until_Date__c ) = YEAR( ADvendio__Month__c ), 
  ADvendio__Campaign_Item__r.ADvendio__until_Date__c, 
  IF( MONTH( ADvendio__Month__c ) = 12,
    DATE( YEAR( ADvendio__Month__c ), 12, 31 ),
    DATE( YEAR( ADvendio__Month__c ), MONTH ( ADvendio__Month__c ) + 1, 1 ) - 1 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Gross_amount_RS__c</fullName>
        <formula>IF(NOT(ISNULL(ADvendio__Amount__c)), ADvendio__Amount__c, IF(AND(NOT(ISNULL(ADvendio__Campaign_Item__r.ADvendio__Days__c)), ADvendio__Campaign_Item__r.ADvendio__Days__c &gt; 0, NOT(ISNULL(ADvendio__Days__c)), ADvendio__Days__c &gt; 0), ROUND(ADvendio__Campaign_Item__r.ADvendio__AmountAPEX__c / ADvendio__Campaign_Item__r.ADvendio__Days__c * ADvendio__Days__c, 2), 0))</formula>
        <label>Gross amount (RS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountB1__c</fullName>
        <formula>ADvendio__Campaign_Item__r.ADvendio__AmountAPEX__c / ADvendio__Campaign_Item__r.ADvendio__Quantity__c *ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (B1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountB2__c</fullName>
        <formula>ADvendio__Campaign_Item__r.ADvendio__Amount_B2APEX__c / ADvendio__Campaign_Item__r.ADvendio__Quantity__c * ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (B2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountB3__c</fullName>
        <formula>ADvendio__Campaign_Item__r.ADvendio__Amount_B3APEX__c / ADvendio__Campaign_Item__r.ADvendio__Quantity__c * ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (B3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountForecast__c</fullName>
        <description>This field calculates the invoice amount forecast depending on linear distribution, start of the campaign item and month.</description>
        <formula>CASE(
	1, 
	IF(
		ADvendio__Campaign_Item__r.ADvendio__LinearDistribution__c = TRUE || ADvendio__Campaign_Item__r.ADvendio__from_Date__c &gt; TODAY(),
		1,
		0
	), 
	ADvendio__Campaign_Item__r.ADvendio__Amount_net3APEX__c / (
		(
			IF(
				YEAR(ADvendio__Campaign_Item__r.ADvendio__until_Date__c) - YEAR(ADvendio__Campaign_Item__r.ADvendio__from_Date__c) &gt; 1,
				YEAR(ADvendio__Campaign_Item__r.ADvendio__until_Date__c) - YEAR(ADvendio__Campaign_Item__r.ADvendio__from_Date__c) - 1,
				0
			)
		) * 12
		+
		(
			IF(
				YEAR(ADvendio__Campaign_Item__r.ADvendio__from_Date__c) &lt; YEAR(ADvendio__Campaign_Item__r.ADvendio__until_Date__c),
				12 - MONTH(ADvendio__Campaign_Item__r.ADvendio__from_Date__c) + MONTH(ADvendio__Campaign_Item__r.ADvendio__until_Date__c),
				MONTH(ADvendio__Campaign_Item__r.ADvendio__until_Date__c) - MONTH(ADvendio__Campaign_Item__r.ADvendio__from_Date__c)
			) + 1
		)
	), 
	ADvendio__Campaign_Item__r.ADvendio__Amount_net3APEX__c * 
	(
		ADvendio__InvoiceQuantityForecast__c / ADvendio__Campaign_Item__r.ADvendio__Quantity__c
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculates the invoice amount forecast depending on linear distribution, start of the campaign item and month.</inlineHelpText>
        <label>Invoice Amount Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountN1__c</fullName>
        <formula>ADvendio__Campaign_Item__r.ADvendio__Amount_netAPEX__c / ADvendio__Campaign_Item__r.ADvendio__Quantity__c *ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (N1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountN2__c</fullName>
        <formula>ADvendio__Campaign_Item__r.ADvendio__Amount_net_netAPEX__c / ADvendio__Campaign_Item__r.ADvendio__Quantity__c *ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (N2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountN3__c</fullName>
        <formula>ADvendio__Campaign_Item__r.ADvendio__Amount_net3APEX__c / ADvendio__Campaign_Item__r.ADvendio__Quantity__c * ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (N3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceQuantityForecast__c</fullName>
        <description>This field calculates the invoice quantity forecast depending on linear distribution, start of the campaign item and month.</description>
        <formula>IF (
	ADvendio__Campaign_Item__r.ADvendio__LinearDistribution__c || ADvendio__Campaign_Item__r.ADvendio__from_Date__c &gt; TODAY() ,
	ADvendio__Campaign_Item__r.ADvendio__Quantity__c / (
		(
			IF(
				YEAR(ADvendio__Campaign_Item__r.ADvendio__until_Date__c) - YEAR(ADvendio__Campaign_Item__r.ADvendio__from_Date__c) &gt; 1,
				YEAR(ADvendio__Campaign_Item__r.ADvendio__until_Date__c) - YEAR(ADvendio__Campaign_Item__r.ADvendio__from_Date__c) - 1,
				0
			)
		) * 12
		+
		(
		IF(
			YEAR(ADvendio__Campaign_Item__r.ADvendio__from_Date__c) &lt; YEAR(ADvendio__Campaign_Item__r.ADvendio__until_Date__c),
			12 - MONTH(ADvendio__Campaign_Item__r.ADvendio__from_Date__c) + MONTH(ADvendio__Campaign_Item__r.ADvendio__until_Date__c),
			MONTH(ADvendio__Campaign_Item__r.ADvendio__until_Date__c) - MONTH(ADvendio__Campaign_Item__r.ADvendio__from_Date__c)
		) + 1)
	)
, 
	IF (
		ADvendio__Month__c &lt; TODAY(),
		ADvendio__InvoiceQuantity__c, 
		IF (
			ADvendio__AccumulatedDeliveryTillNow__c = 0,
			0,
			IF (
				ADvendio__Campaign_Item__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c &gt; 0, 
				(ADvendio__Campaign_Item__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c) / (MONTH(ADvendio__Campaign_Item__r.ADvendio__until_Date__c) - MONTH(TODAY())),
				0
			)
		)
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculates the invoice quantity forecast depending on linear distribution, start of the campaign item and month.</inlineHelpText>
        <label>Invoice Quantity Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceQuantityManual__c</fullName>
        <label>Invoice Quantity (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceQuantity__c</fullName>
        <formula>IF (
	ADvendio__Campaign_Item__r.ADvendio__LinearDistribution__c,
	ADvendio__Campaign_Item__r.ADvendio__Quantity__c / ADvendio__Campaign_Item__r.ADvendio__Days__c * ADvendio__Days__c,
	IF(
		!ISBLANK(ADvendio__QuantityManualFormula__c),
		MAX(0, MIN(ADvendio__Campaign_Item__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c + ADvendio__QuantityManualFormula__c, ADvendio__QuantityManualFormula__c)),
		

		CASE (
			ADvendio__Campaign_Item__r.ADvendio__Billing_category__c,
			
			&quot;CPM&quot;,
			IF(
				ISBLANK(ADvendio__Delivered_AIs__c),
				0,
				MAX(0, MIN(ADvendio__Campaign_Item__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c + ADvendio__Delivered_AIs__c, ADvendio__Delivered_AIs__c))),
			
			&quot;CPC&quot;,
			IF(
				ISBLANK(ADvendio__Delivered_Clicks__c),
				0,
				MAX(0, MIN(ADvendio__Campaign_Item__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c + ADvendio__Delivered_Clicks__c, ADvendio__Delivered_Clicks__c))),
			
			&quot;vCPM&quot;,
			IF(
				ISBLANK(ADvendio__ViewedAIs__c),
				0,
				MAX(0, MIN(ADvendio__Campaign_Item__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c + ADvendio__ViewedAIs__c, ADvendio__ViewedAIs__c))),
			0
			 )
	)
)</formula>
        <label>Invoice Quantity (RS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Month__c</fullName>
        <description>This value will be filled automatically by a script. It displays the month in which the revenue was made.</description>
        <inlineHelpText>This value will be filled automatically by a script. It displays the month in which the revenue was made.</inlineHelpText>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__QuantityManualFormula__c</fullName>
        <description>This field is used to check, if Invoice Quantity (manual) is blank. If this is the case, Delivered AIs (manual), Delivered Clicks (manual) or Viewed AIs (manual) are used.</description>
        <formula>CASE(1, 
	IF(ISBLANK(ADvendio__InvoiceQuantityManual__c), 0,1), ADvendio__InvoiceQuantityManual__c, 
	CASE(ADvendio__Campaign_Item__r.ADvendio__Billing_category__c,
		&quot;CPM&quot;, ADvendio__DeliveredAIsManual__c,
		&quot;CPC&quot;, ADvendio__DeliveredClicksManual__c,
		&quot;vCPM&quot;, ADvendio__ViewedAIsManual__c,
		null
	)
)</formula>
        <label>Quantity Manual (Formula)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__StartDate__c</fullName>
        <description>This field displays the start date of the month.</description>
        <formula>IF( ADvendio__Campaign_Item__r.ADvendio__from_Date__c &lt;  ADvendio__Month__c , ADvendio__Month__c, ADvendio__Campaign_Item__r.ADvendio__from_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>The UniqueKey will be filled automatically by a script.</description>
        <externalId>true</externalId>
        <inlineHelpText>The UniqueKey will be filled automatically by a script.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__ViewedAIsManual__c</fullName>
        <description>This field can be filled manually. It holds the delivered viewed ad impressions of the assigned campaign item and overrides the ad server field Viewed AIs.</description>
        <inlineHelpText>Enter the Viewed AIs manually to override the delivered viewed ad impressions.</inlineHelpText>
        <label>Viewed AIs (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ViewedAIs__c</fullName>
        <description>This field will be automatically filled. It displays the delivered viewed ad impressions of the assigned campaign item.</description>
        <inlineHelpText>This field will be automatically filled by a script. It displays the delivered viewed ad impressions of the assigned campaign item.</inlineHelpText>
        <label>Viewed AIs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Year__c</fullName>
        <description>This value will be filled automatically by a script. It displays the year in which the revenue was made.</description>
        <formula>DATE(YEAR(ADvendio__Month__c ),1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value will be filled automatically by a script. It displays the year in which the revenue was made.</inlineHelpText>
        <label>Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Revenue Schedule</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Campaign_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RS-{0}</displayFormat>
        <label>Revenue Schedule No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>